--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "require-dev": {
     "php-http/guzzle6-adapter": "~1.1",
-    "squizlabs/php_codesniffer": "~3.2",
+    "squizlabs/php_codesniffer": "~3.4",
     "phploc/phploc": "~4",
     "sebastian/phpcpd": "~3",
     "phpmd/phpmd": "~2.6",
@@ -32,7 +32,7 @@
     "satooshi/php-coveralls": "~1.1",
     "league/container": "~2.4",
     "povils/phpmnd": "~1.1",
-    "vantoozz/php-density": "~0"
+    "vantoozz/phpcdm": "~1"
   },
   "suggest": {
     "php-http/guzzle6-adapter": "to use Guzzle as HTTP client"
