--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     "symfony/dom-crawler": "^3.3 || ^4",
     "symfony/css-selector": "^3.3 || ^4"
   },
+  "conflict": {
+    "guzzlehttp/guzzle": "<6.3.3"
+  },
   "require-dev": {
     "php-http/guzzle6-adapter": "~1.1",
     "squizlabs/php_codesniffer": "~3.4",
