--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     "ext-json": "*",
     "php-http/client-implementation": "~1",
     "php-http/message-factory": "^1.0.2",
-    "php-http/httplug": "^1.1",
+    "php-http/httplug": "^1.1|^2.1",
     "php-http/message": "^1.5",
     "symfony/dom-crawler": "^3.3 || ^4",
     "symfony/css-selector": "^3.3 || ^4"
   },
   "require-dev": {
-    "php-http/guzzle6-adapter": "~1.1",
+    "php-http/guzzle6-adapter": "*",
     "squizlabs/php_codesniffer": "~3.4",
     "phploc/phploc": "~4",
     "sebastian/phpcpd": "~3",
